[package]
name = "usftp"
description = "Copy some files using sftp by passing the password as a plaintext command-line argument."
authors = ["Joe Armitage <joe@armitage.com>"]
version = "1.0.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/u4ium/usftp/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.14", features=["cargo"]}
remotefs = "^0.2.0"
remotefs-ssh = "^0.1.0"
thiserror = "1.0.30"
log = "0.4"
env_logger = "0.9.0"